--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "npx vite build",
+    "dev": "npx vite"
   },
+  "engines": {
+    "node": ">=18"
+},
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "jspdf": "^2.5.1",
