--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite"
   },
   "engines": {
-    "node": ">=18"
+    "node": "22.16.0"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
