--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "autoprefixer": "^10.4.21",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^5.0.2",
     "tailwindcss": "^4.1.13",
     "xlsx": "^0.18.5"
   },
