--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "@vercel/analytics": "^1.5.0",
     "acorn": "^8.15.0",
     "acorn-jsx": "^5.3.2",
     "adler-32": "^1.3.1",
